# llm

./: .dvcignore  .gitignore  .markdownlint.yaml  .markdownlint.yml  .pre-commit-config.yaml  .rumdl.toml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GEMINI-example.md  GEMINI.md  Makefile  README.md  REFACTORING_REPORT.md  ROADMAP.md  SECURITY.md  architecture_review.md  cliff.toml  commit_message.txt  compose.yml  conftest.py  dvc.yaml  main.py  mkdocs.yml  pyproject.toml  ruff.toml  warnings.txt
.clade/: run_freq_tests.sh
.claude/: r1.sh  run_config_tests.sh  run_freq_tests.sh  run_stop_tests.py  run_stop_tests.sh  run_test.sh  v.py  v.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml  ci.yml  docker.yml  docs.yml  release.yml
_learning/: README.md
_learning/01_concepts/: attn-01.md  attn-02.md  transformer_deep_dive.md  transformer_diagrams.md
_learning/02_guides/: code_structure_map.md  simplified_training_concept.md
_learning/docs/: learning.md  roadmap.md  transformer-01.md  transformer-02.md
_learning/scripts/: README.md  best_minimal_train.py  best_train.py  optimized_train_01.py  optimized_train_02.py
_learning/tmp/: attn1.py  attn2.py  attn3.py  mha.py
configs/: dpo_local_demo.yaml  dpo_ultrafeedback.yaml  example.yaml  serve_local_demo.yaml  serve_pretrained.yaml  sft_alpaca.yaml  sft_local_demo.yaml  streaming_c4.yaml  streaming_local_demo.yaml
data/: dummy_corpus.txt
docs/: README.md  architecture.md  attn1.py  attn2.py  attn3.py  development.md  faq.md  getting-started.md  guide-finetuning.md  guide-inference.md  learning.md  llm.md  mha.py  prompt.md  training_framework_usage.md  transformer-01.md  troubleshooting.md  tutorial-cpu-llm.md  tutorial-pretraining.md  usage.md
docs/adr/: 001-use-gqa.md  002-use-swiglu.md  003-use-kv-cache.md  003-use-prek.md  004-paged-attention-serving.md  004-use-qlora.md  004-use-ty.md  005-export-registry.md  005-use-kv-cache.md  006-checkpoint-format-unification.md  006-use-qlora.md  007-gptq-integration.md  008-mixed-precision-quantization.md  README.md  template.md
docs/api/: data.md  evaluation.md  generation.md  index.md  models.md  runtime.md  serving.md  training.md
docs/audits/: 2026-07-12-technical-due-diligence.md
docs/development/: README.md  components.md  deep-dive-ddp.md  guide-configuration.md  guide-extending.md  training-flow.md  troubleshooting.md
docs/guides/: checkpoints.md  data.md  distributed.md  evaluation.md  finetuning.md  inference.md
docs/reference/: architecture.md  cli.md
docs/training/: COMPONENTS.md  DEEP_DIVE_DDP.md  GUIDE_CONFIGURATION.md  GUIDE_EXTENDING.md  README.md  TRAINING_FLOW.md  TROUBLESHOOTING.md  components.md  deep-dive-ddp.md  flow-callbacks.md  guide-configuration.md  guide-extending.md  training-flow.md  troubleshooting.md
docs/tutorials/: 01-pretraining.md  02-finetuning.md  03-inference.md
examples/: README.md  inference_demo.py  kv_cache_demo.py  moe_vs_mlp_demo.py  openai_client_demo.py  qlora_finetuning_demo.py
notebooks/: README.md  quick_start.ipynb
scripts/: README.md  benchmark_inference.py  best_train.py  e2e_pipeline.py  optimized_train.py  optimized_train_02.py  train.py  train_01.py  train_02.py  train_simple_decoder.py
src/llm/: __init__.py  app.py  exceptions.py  export.py  inference.py
tests/: conftest.py  dummies.py  test_architectures.py  test_dpo_task.py  test_e2e_pipeline.py  test_example.py  test_exceptions.py  test_export.py  test_inference.py  test_inference_demo.py  test_init.py  test_lm_task.py  test_lm_task_advanced.py  test_mlp.py  test_tokenization.py
tests/cli/: test_quantize_cli.py
tests/compat/: test_hf_loader.py  test_hf_publisher.py  test_legacy_imports.py
tests/core/: conftest.py  test_adalora.py  test_adapter.py  test_alibi.py  test_attn_registry.py  test_bitfit.py  test_embedding.py  test_embedding_demo.py  test_flash_attn_registry.py  test_flash_prefix.py  test_hypothesis_kv_cache.py  test_hypothesis_norm_factory.py  test_hypothesis_peft.py  test_hypothesis_registry.py  test_ia3.py  test_init.py  test_kv_cache.py  test_kv_cache_invariants.py  test_layer_norm.py  test_layer_norm_demo.py  test_lora.py  test_mha_prefix.py  test_mla_prefix.py  test_mlp.py  test_mlp_advanced.py  test_moe.py  test_moe_demo.py  test_moe_integration.py  test_norm_registry.py  test_paged_attention.py  test_paged_kv_cache.py  test_peft_registry.py  test_peft_save_load.py  test_pfeiffer_adapter.py  test_positional_encoding.py  test_prefix_invariants.py  test_prefix_tuning.py  test_qlora.py  test_rms_norm.py  test_rms_norm_demo.py  (+4 more)
tests/data/: conftest.py  test_data_abstraction.py  test_dedup_source.py  test_dpo_dataset.py  test_dvc_integration.py  test_loader.py  test_loader_demo.py  test_map_base_helpers.py  test_presets.py  test_reward_data_module.py  test_sft_dataset.py  test_sources.py  test_streaming.py  test_streaming_resume.py  test_text_dataloader_demo.py  test_text_dataset.py
tests/e2e/: test_ddp.py  test_dpo.py  test_dpo_main_path.py  test_gradient_accumulation.py  test_quantize_cli.py  test_resume_training.py  test_serve_main_path.py  test_sft.py  test_sft_main_path.py  test_stream_lm_main_path.py  test_streaming_resume.py  test_training.py
tests/evaluation/: test_accuracy.py  test_base.py  test_eval_config.py  test_generation.py  test_harness.py  test_infer_task.py  test_lm_eval_pipeline.py  test_lm_task.py  test_perplexity.py  test_runner.py  test_training_callback.py
tests/export/: test_export_registry.py  test_torchscript_export.py
tests/generation/: test_backend_registry.py  test_hypothesis_sampling.py  test_speculative.py  test_stop_sequences.py
tests/inference/: test_backends.py  test_batched_backend.py  test_frequency_penalty.py  test_inference.py  test_inference_advanced.py  test_logit_bias.py  test_presence_penalty.py  test_sampling.py
tests/models/: conftest.py  test_architectures.py  test_decoder.py  test_decoder_architecture.py  test_decoder_causal.py  test_decoder_convergence.py  test_decoder_demo.py  (+2 more)
(+336 files in other folders)
