[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[project]
name = "llm"
version = "0.0.5"
description = "A modular PyTorch framework for training and serving Large Language Models"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [
    { name = "Mystvio" },
]
keywords = [
    "llm",
    "transformer",
    "pytorch",
    "deep-learning",
    "machine-learning",
    "gqa",
    "moe",
    "inference",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "fastapi[standard]>=0.136.3",
    "lm_eval>=0.4.12",
    "openai>=2.41.0",
    "prometheus-fastapi-instrumentator>=8.0.0",
    "python-json-logger>=4.1.0",
    "rouge-score>=0.1.2",
    "sacrebleu>=2.6.0",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "torch>=2.12.0",
    "transformers>=5.10.2",
]

[dependency-groups]
dev = [
  {include-group = "test"},
]
test = [
    "allure-pytest>=2.16.0",
    "ipykernel>=7.2.0",
    "onnx>=1.21.0",
    "onnxruntime>=1.26.0",
    "pytest>=9.0",
    "pytest-cov>=7.0",
]
streaming = [
    "datasets>=3.0.0",
]
docs = [
    "mkdocs-material>=9.7.0",
]

[project.entry-points."llm.models"]
decoder = "llm.runtime.model_factory:build_decoder"
regression_mlp = "llm.runtime.model_factory:build_regression_mlp"

[project.entry-points."llm.generation_backends"]
eager = "llm.generation.registry:build_eager_backend"
batched = "llm.generation.registry:build_batched_backend"

[project.entry-points."llm.data_sources"]
local = "llm.data.sources:_build_local_source"
hf = "llm.data.sources:_build_hf_source"

[project.scripts]
llm-train = "llm.training.train:app"
llm-serve = "llm.serving.api:main"

[project.urls]
Documentation = "https://github.com/pplmx/llm#readme"
Issues = "https://github.com/pplmx/llm/issues"
Source = "https://github.com/pplmx/llm"

[tool.uv]
default-groups = ["test"]

[tool.uv.build-backend]
module-name = "llm"

[tool.pytest]
minversion = "9.0"
filterwarnings = [
    "ignore:The argument 'device' of:DeprecationWarning",
    "ignore:Module llm was previously imported"
]
addopts = [
    "-ra",
    "-q",
]
markers = [
    "quick: Fast unit tests (< 1s)",
    "slow: Slower tests (1-30s)",
    "heavy: Resource-intensive tests (> 30s, may require GPU)",
    "e2e: End-to-end workflow tests",
    "integration: Tests requiring external dependencies (e.g., HuggingFace)",
    "gpu: Tests that require at least 1 GPU",
    "multi_gpu: Tests that require multiple GPUs (2+)",
    "full_cluster: Tests that require 8 GPUs (full cluster)",
    "need_gpu(n): Tests that require at least n GPUs",
]
consider_namespace_packages = true # Enable this to allow using the same filename in different test directories without needing __init__.py in each one
pythonpath = ["src", "."]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source_pkgs = ["llm"]
branch = true
parallel = true
omit = [
    "*/.venv/*",
    "*/tests/*",
    "*/site-packages/*",
]

[tool.coverage.paths]
llm = ["src/llm", "*/llm/src/llm"]
tests = ["tests", "*/llm/tests"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "if self.debug:",
    "if TYPE_CHECKING:",
    "no cov",
    "raise NotImplementedError",
    "pass",
    "pragma: no cover",
]
show_missing = true  # Show missing lines in the report
precision = 2  # Number of decimal places to use when rounding
