[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[project]
name = "llm"
version = "0.0.5"
description = "A modular PyTorch framework for training and serving Large Language Models"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [
    { name = "Mystvio" },
]
keywords = [
    "llm",
    "transformer",
    "pytorch",
    "deep-learning",
    "machine-learning",
    "gqa",
    "moe",
    "inference",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "fastapi[standard]>=0.136.3",
    "openai>=2.41.0",
    "prometheus-fastapi-instrumentator>=8.0.0",
    "python-json-logger>=4.1.0",
    "torch>=2.12.0,<3.0.0",
    "transformers>=5.10.2,<6.0.0",
]

# Mirrored under [project.optional-dependencies] so `pip install llm[eval]`
# works for users who do not use uv. Keep the two lists in sync.
[dependency-groups]
dev = [
  {include-group = "test"},
  "hypothesis>=6.156.6",
]
test = [
    "allure-pytest>=2.16.0",
    "hypothesis>=6.0",
    "ipykernel>=7.2.0",
    "onnx>=1.21.0",
    "onnxruntime>=1.26.0",
    "pytest>=9.0",
    "pytest-cov>=7.0",
]
# Evaluation metric libraries. Only needed when running offline evaluation
# (ROUGE, BLEU, chrF, F1, lm-eval harness). Core training + serving install
# does not require them.
eval = [
    "lm_eval>=0.4.12",
    "rouge-score>=0.1.2",
    "sacrebleu>=2.6.0",
    "scikit-learn>=1.9.0",
]
# Optional training-log backends. ``TensorBoardLogger`` requires tensorboard;
# core training works without it (callbacks no-op is not acceptable — the
# logger will raise a clear error if the package is missing).
logging = [
    "tensorboard>=2.20.0",
]
streaming = [
    "datasets>=3.0.0",
]
docs = [
    "mkdocs-material>=9.7.0",
    # mkdocstrings auto-generates API reference pages from docstrings.
    # ``mkdocstrings-python`` is the Python handler; ``mkdocstrings[python]``
    # pulls in both. Pinned to >=0.27 because the handler API stabilized
    # there.
    "mkdocstrings[python]>=0.27.0",
]
# Optional performance backends. ``flash-attn`` enables
# ``attn_impl="flash_attn"`` through :class:`llm.core.attn.FlashAttention`;
# without it the registry entry exists but instantiation raises a clear
# ``ImportError``. ``flash-attn`` ships CUDA wheels only — installation
# on CPU-only hosts is a no-op.
perf = [
    "flash-attn>=2.5.0",
]
# Optional HuggingFace compat layer. ``safetensors`` enables
# :func:`llm.compat.hf_publisher.save_pretrained`; ``huggingface_hub``
# enables :func:`llm.compat.hf_publisher.push_to_hub` and
# :func:`llm.compat.hf_loader.from_pretrained`'s Hub-path. Both
# modules degrade to clear ``ImportError``s when the corresponding
# package is missing.
compat = [
    "huggingface_hub>=0.20.0",
    "safetensors>=0.4.0",
]

[project.optional-dependencies]
# Non-uv users: ``pip install llm[eval]``. Keep in sync with the groups above.
eval = [
    "lm_eval>=0.4.12",
    "rouge-score>=0.1.2",
    "sacrebleu>=2.6.0",
    "scikit-learn>=1.9.0",
]
logging = [
    "tensorboard>=2.20.0",
]
perf = [
    "flash-attn>=2.5.0",
]
compat = [
    "huggingface_hub>=0.20.0",
    "safetensors>=0.4.0",
]
streaming = [
    "datasets>=3.0.0",
]

[project.entry-points."llm.models"]
decoder = "llm.runtime.model_factory:build_decoder"
regression_mlp = "llm.runtime.model_factory:build_regression_mlp"

[project.entry-points."llm.generation_backends"]
eager = "llm.generation.registry:build_eager_backend"
batched = "llm.generation.registry:build_batched_backend"

[project.entry-points."llm.data_sources"]
local = "llm.data.sources:_build_local_source"
hf = "llm.data.sources:_build_hf_source"

# ``llm.export_backends`` — third-party export targets (e.g.
# ``torch.compile``, ``vLLM``, ``TensorRT-LLM``) plus the built-in
# ``torchscript`` target (Tier 3 #11). The ``onnx`` target stays
# registered in code (see ``llm/export/registry.py``) because it is
# the reference implementation and we want it to resolve even when
# no entry-point machinery runs (e.g. minimal test environments).
#
# Entry points here point at the factory itself
# (``build_<target>_exporter``), which is the contract expected by
# ``llm.runtime.plugins.load_entry_point_registry`` — the loader
# resolves each entry point with ``ep.load()`` and registers the
# returned callable directly into ``EXPORT_REGISTRY``.
[project.entry-points."llm.export_backends"]
torchscript = "llm.export.torchscript:build_torchscript_exporter"

# ``llm.peft_methods`` — third-party PEFT methods (e.g. Pfeiffer /
# Compacter / MAD-X adapters, custom reparameterization tricks) plus
# any user-built wrappers around the built-in seven (lora / qlora /
# adalora / prefix_tuning / ia3 / bitfit / adapter). The built-in
# methods stay registered in code (see ``llm/core/peft/methods.py``)
# because they are the reference implementations and we want them to
# resolve even when no entry-point machinery runs (minimal test envs).
#
# Entry points here point at a factory that returns a
# ``llm.core.peft.PEFTMethod`` instance — the loader resolves each
# entry point with ``ep.load()`` and registers the returned
# ``PEFTMethod`` directly into ``PEFT_REGISTRY``.
[project.entry-points."llm.peft_methods"]

[project.scripts]
llm-train = "llm.training.train:app"
llm-serve = "llm.serving.api:main"

[project.urls]
Documentation = "https://github.com/pplmx/llm#readme"
Issues = "https://github.com/pplmx/llm/issues"
Source = "https://github.com/pplmx/llm"

[tool.uv]
default-groups = ["test"]

[tool.uv.build-backend]
module-name = "llm"

[tool.pytest]
minversion = "9.0"
filterwarnings = [
    "ignore:The argument 'device' of:DeprecationWarning",
    "ignore:Module llm was previously imported"
]
addopts = [
    "-ra",
    "-q",
]
markers = [
    "quick: Fast unit tests (< 1s)",
    "slow: Slower tests (1-30s)",
    "heavy: Resource-intensive tests (> 30s, may require GPU)",
    "e2e: End-to-end workflow tests",
    "integration: Tests requiring external dependencies (e.g., HuggingFace)",
    "gpu: Tests that require at least 1 GPU",
    "multi_gpu: Tests that require multiple GPUs (2+)",
    "full_cluster: Tests that require 8 GPUs (full cluster)",
    "need_gpu(n): Tests that require at least n GPUs",
]
consider_namespace_packages = true # Enable this to allow using the same filename in different test directories without needing __init__.py in each one
pythonpath = ["src", "."]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source_pkgs = ["llm"]
branch = true
parallel = true
omit = [
    "*/.venv/*",
    "*/tests/*",
    "*/site-packages/*",
]

[tool.coverage.paths]
llm = ["src/llm", "*/llm/src/llm"]
tests = ["tests", "*/llm/tests"]

[tool.coverage.report]
# Current measured coverage when running the full ``make test-cov`` suite
# in this CI environment (which has no GPU — CUDA-required tests fail and
# don't exercise their code paths). CPU-only test runs (excluding
# ``tests/core/attn/test_mla.py`` etc.) report ~82.6%; the gap is the
# CUDA-only paths in ``paged_attention``, ``training/core/engine``,
# ``training/distributed``, etc. The bar is set to what the CI can
# actually verify, and ``make test-cov`` also passes ``--cov-fail-under``
# so the gate is enforced on CI runs. Raise the bar as Tier 3 work adds
# GPU CI runners (Tier 3 #1) or marks CUDA-only paths with the ``gpu``
# marker so they're skipped cleanly instead of failing.
fail_under = 77
exclude_lines = [
    "if __name__ == .__main__.:",
    "if self.debug:",
    "if TYPE_CHECKING:",
    "no cov",
    "raise NotImplementedError",
    "pass",
    "pragma: no cover",
]
show_missing = true  # Show missing lines in the report
precision = 2  # Number of decimal places to use when rounding
